# myOS

./: CMakeLists.txt  Makefile  linker.ld
src/boot/: boot.asm
src/kernel/: kernel.c
